fix overflow issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html, 
+/* html, 
 body,
 :root {
   height: 100%
-}
+} */
